# SafetySuite

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  docker-compose.yml
backend/: .env-example  Dockerfile  main.py  main_dev.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: aed04093888a_initial_tables.py
backend/default_tables/: README.md  accident.csv  injury.csv  read_hse_tables.py
backend/docs/: developer_docs.md
backend/scripts/: alembic_revision.sh  alembic_upgrade.sh  entrypoint.sh  entrypoint_dev.sh
backend/src/api/: accident_types.py  accidents.py  db_utils.py  injury_types.py  persons.py  roles.py  sites.py
backend/src/db/: session.py
backend/src/db/models/: accident.py  accident_injury.py  accident_type.py  base.py  injury_type.py  person.py  role.py  site.py
backend/src/schemas/: create.py  response.py
